# caliper

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  litellm_config.yaml  pyproject.toml
caliper/: __init__.py  calibration.py  check_stack.py  dataset_bootstrap.py  diagnostics.py  eval_runner.py  human_review.py  idempotency.py  litellm_client.py  runner.py  schemas.py
caliper/cli/: __init__.py  calibrate.py  check.py  eval.py
caliper/judges/: __init__.py  base.py  rubric_judge.py
docs/: human-review-setup.md
examples/: README.md
examples/code_review/: eval_config.yaml
examples/code_review/code_snippets/hardcoded_api_key/: metadata.json  snippet.js
examples/code_review/code_snippets/missing_auth_check/: metadata.json  snippet.go
examples/code_review/code_snippets/path_traversal_download/: metadata.json  snippet.py
examples/code_review/code_snippets/sql_injection_login/: metadata.json  snippet.py
examples/code_review/code_snippets/xss_profile_page/: metadata.json  snippet.js
examples/code_review/judge_prompts/rubric_judge_v1/: judge_prompt.txt  metadata.json
examples/code_review/prompts/basic_reviewer/: metadata.json  prompt.txt
examples/code_review/prompts/structured_reviewer/: metadata.json  prompt.txt
examples/code_review/rubrics/standard-code-review/: rubric.json
scripts/: generate-secrets.sh
tests/: test_scoring.py
