[project]
name = "caliper"
version = "0.0.1"
description = "Generic, metadata-driven LLM evaluation framework with Langfuse + LiteLLM."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Patrick Walker" },
]
keywords = ["llm", "evaluation", "langfuse", "litellm", "eval", "rubric"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Runtime dependencies are intentionally left for Milestone 3 to keep this
# initial commit minimal — the package skeleton is the work product here.
dependencies = []

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/pdwalker30/caliper"
Repository = "https://github.com/pdwalker30/caliper"
Issues = "https://github.com/pdwalker30/caliper/issues"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["caliper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
