[project]
name = "caliper"
version = "0.0.1"
description = "Generic, metadata-driven LLM evaluation framework with Langfuse + LiteLLM."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Patrick Walker" },
]
keywords = ["llm", "evaluation", "langfuse", "litellm", "eval", "rubric"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Langfuse v3 Python SDK — datasets, traces, generations, scores, runs
    "langfuse>=3.0,<4.0",
    # OpenAI-compatible client used to talk to the LiteLLM proxy container
    "openai>=1.50,<2.0",
    # Direct HTTP for Langfuse REST endpoints (annotation queues + score configs)
    # where the v3 SDK coverage is spotty.
    "httpx>=0.27",
    # Data contracts (test cases, rubric, verdicts, eval config)
    "pydantic>=2.0,<3.0",
    # YAML eval configs
    "pyyaml>=6.0",
    # .env loading for credentials
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/pdwalker30/caliper"
Repository = "https://github.com/pdwalker30/caliper"
Issues = "https://github.com/pdwalker30/caliper/issues"

# Console scripts — installed when you `pip install -e .` or `pip install caliper`.
# Lets you type `caliper-eval ...` instead of `python -m caliper.cli.eval ...`.
[project.scripts]
caliper-eval = "caliper.cli.eval:main"
caliper-check = "caliper.cli.check:main"
caliper-calibrate = "caliper.cli.calibrate:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Single top-level package; sub-packages (caliper.cli, caliper.judges) are
# auto-discovered via __init__.py.
packages = ["caliper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
